# cpp-ebook

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setup.sh
src/: Ebooc.cpp
test/test-1/: input.txt  output.txt
test/test-2/: input.txt  rezult.txt
test/test-3/: output.txt
